fix(swagger): supplemented missing path param in openapi docs
